--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "dev": "gulp",
     "build": "gulp build --build",
     "zip": "gulp deployZIP --build",
-    "svgSprive": "gulp svgSprive"
+    "svgSprive": "gulp svgSprive",
+    "watch": "./node_modules/.bin/webpack --watch --config webpack.dev.js"
   },
   "author": "Mitzael",
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "latest",
+    "css-loader": "^6.7.3",
     "del": "^6.1.1",
     "gulp": "latest",
     "gulp-autoprefixer": "latest",
@@ -43,5 +45,9 @@
     "webp-converter": "2.2.3",
     "webpack": "latest",
     "webpack-stream": "latest"
+  },
+  "dependencies": {
+    "gulp-cssimport": "^7.0.0",
+    "swiper": "^9.2.2"
   }
 }
